log
Fri 10 May 2024 12:25:49 AM UTC: 
 tests:  1|8
total_score: 0/70
68e01b8
Fri 10 May 2024 12:29:44 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
b7f309b
Fri 10 May 2024 12:34:39 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
4f05b81
Fri 10 May 2024 12:35:15 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 5/70
b173d37
Fri 10 May 2024 12:35:46 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 5/70
24a79ec
Fri 10 May 2024 12:43:59 AM UTC: 
 treemap.c | 21 ++++-----------------
 1 file changed, 4 insertions(+), 17 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:19: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   54 |         TreeNode *parent = NULL;
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b99d92
